Adicionado ao projeto os Arquivos Dockerfile e docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # H2 console (Ãºtil para inspecionar tabelas)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 
 # Server
 server.port=8080
@@ -25,3 +26,15 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Logs (opcional)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+
+# Para rodar no Banco MySQL - application-prod.properties (perfil produção ? MySQL)
+# spring.datasource.url=jdbc:mysql://mysql:3306/techchallenge?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
