--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.9"
 
 services:
-  fiap-tech-challenge:
+  app:
     build: .
     container_name: fiap-tech-challenge
     ports:
       - "8080:8080"
     environment:
-      - SPRING_PROFILES_ACTIVE=prod # Use 'default' para H2, 'prod' para MySQL
+      - SPRING_PROFILES_ACTIVE=prod  # Prod usa MySQL
     depends_on:
       - mysql
 
@@ -18,6 +18,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: techchallenge
+    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
     volumes:
