--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,18 +1,24 @@
 spring.application.name=fiap-tech-challenge
 
-# Datasource MySQL no Docker
-spring.datasource.url=jdbc:mysql://mysql:3306/techchallenge?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
+# Datasource Postgresql no Docker
+spring.datasource.url=jdbc:postgresql://postgres:5432/techchallenge
+spring.datasource.username=postgres
 spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Server
 server.port=8080
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# Actuator (para healthcheck do Docker)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.server.port=8080
