--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
 			</plugin>
 
 			<!-- Swagger generate code plugin -->
-			<plugin>
+			<!-- <plugin>
 				<groupId>io.swagger.codegen.v3</groupId>
 				<artifactId>swagger-codegen-maven-plugin</artifactId>
 				<version>3.0.73</version>
@@ -215,7 +215,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 
 		</plugins>
 
