Criado arquivo application-h2.properties deixando o banco h2 como plano B; No arquivo application-dev.properties foi criado o banco de dados via docker no postgre como plano PRINCIPAL;

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,23 +1,18 @@
 spring.application.name=fiap-tech-challenge
 
-# Datasource (H2 in-memory para testes locais)
-spring.datasource.url=jdbc:h2:mem:techchallenge;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Datasource (PostgreSQL no Docker)
+spring.datasource.url=jdbc:postgresql://localhost:5432/techchallenge
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# H2 console (útil para inspecionar tabelas)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
-
 # Server
-server.port=8081
+server.port=8080
 
 # Springdoc / Swagger
 springdoc.api-docs.path=/api-docs
@@ -26,3 +21,4 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Logs (opcional)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
