feat: adiciona script data.sql para popular tabelas com dados iniciais

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# H2 console (útil para inspecionar tabelas)
+# H2 console (util para inspecionar tabelas)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
@@ -26,3 +26,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Logs (opcional)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Executar scripts SQL automaticamente
+spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
+spring.jpa.defer-datasource-initialization=true
