--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,9 +12,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Inicialização do banco (executar data.sql)
+spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
+spring.sql.init.continue-on-error=true
+spring.jpa.defer-datasource-initialization=true
+
 # Server
 server.port=8080
 
+# Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
