terminado a parte de segurança no CRUD, e criado o endpoint para trocar a senha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Actuator básico (vale em todos os ambientes, cada perfil pode detalhar mais)
 management.endpoints.web.exposure.include=health,info
 
+spring.sql.init.mode=never
+
+
