--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,11 +8,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Inicialização do banco (executar data.sql)
+# Inicializaï¿½ï¿½o do banco (executar data.sql)
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
 spring.sql.init.continue-on-error=true
