--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,10 @@
 spring.application.name=fiap-tech-challenge
 
 # Datasource Postgresql no Docker
-spring.datasource.url=jdbc:postgresql://postgres:5432/techchallenge
-spring.datasource.username=postgres
-spring.datasource.password=1234
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
