--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,11 @@ spring.application.name=fiap-tech-challenge
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-# Actuator básico (vale em todos os ambientes, cada perfil pode detalhar mais)
+# Actuator bï¿½sico (vale em todos os ambientes, cada perfil pode detalhar mais)
 management.endpoints.web.exposure.include=health,info
 
 spring.sql.init.mode=never
+
+spring.web.resources.static-locations=classpath:/static/
 
 
