--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ management.endpoints.web.exposure.include=health,info
 spring.sql.init.mode=never
 
 spring.web.resources.static-locations=classpath:/static/
-
+springdoc.swagger-ui.url=/swagger.yaml
+springdoc.swagger-ui.path=/swagger-ui.html
 
